Add from-disk flag on document-summary
And warn if not set and the summary accesses disk.